--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: vladimir.levin@uni.lu
 description:
 author: Vladimir Levin
 baseurl: "blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://vladimirlevin.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  vovalev
 linkedin_username: vladimir-levin
 # port: 4444
