--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Vladimir Levin's Website
+title: Vladimir Levin's Blog
 email: vladimir.levin@uni.lu
 description:
 author: Vladimir Levin
