add names to the links

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description:
 author: Vladimir Levin
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vladimirlevin.com" # the base hostname & protocol for your site, e.g. http://example.com
+# url: ""
 github_username:  vovalev
 linkedin_username: vladimir-levin
 # port: 4444
