--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Vladimir Levin's Blog
-email: blog@vladimirlevin.com
+# email: blog@vladimirlevin.com
 description:
 author: Vladimir Levin
 baseurl: "" # the subpath of your site, e.g. /blog
